src/components/status.css
/* ... */
.status.filtered .avatar {
  opacity: 0.5;
  transition: opacity 0.7s ease-in;
}
.status.filtered:is(:hover, :focus, :active) .avatar {
  opacity: 1;
}
.status.filtered :is(.status-filtered-info-1, .status-filtered-info-2) {
  transition: all 0.2s ease-out;
}
.status.filtered:hover :is(.status-filtered-info-1, .status-filtered-info-2) {
  transition-delay: 1.5s;
}
.status.filtered .status-filtered-info-1 {
  opacity: 0.5;
}
.status.filtered:is(:hover, :focus, :active) .status-filtered-info-1 {
  opacity: 0;
}
.status.filtered .status-filtered-info-2 {
  opacity: 0;
  transform: translateX(8px);
  position: absolute;
  inset-inline-start: 0;
}
.status.filtered:is(:hover, :focus, :active) .status-filtered-info-2 {
  opacity: 0.75;
  transform: translateX(0);
}

.status.compact-thread {
  display: flex;
  gap: 8px;
  padding-block: 8px;
}
.status.compact-thread .status-thread-badge {
  flex-shrink: 0;
  min-width: 50px;
  justify-content: center;
}
.status.compact-thread .content-compact {
  overflow: hidden;
  display: -webkit-box;
  display: box;
  -webkit-box-orient: vertical;
  box-orient: vertical;
  -webkit-line-clamp: 2;
  line-clamp: 2;
  font-size: 90%;
}

.status.compact-reply {
  --avatar-size: 20px;
  --line-start: 40px;
  --line-width: 3px;
  --line-end: calc(var(--line-start) + var(--line-width));

  display: flex;
  gap: 12px;
  --top-padding: 16px;
  padding-top: var(--top-padding);
  padding-bottom: 0;
  margin-bottom: calc(-1 * var(--top-padding) / 2);
  background-image: linear-gradient(
    var(--post-gradient-angle),
    transparent 2.5%,
    var(--reply-to-faded-color) 10%,
    transparent
  );
  background-repeat: no-repeat;
  background-size: 100% calc(100% - var(--top-padding) / 2);

  &.visibility-direct {
    background-image: var(--yellow-stripes);
  }

  .status-pre-meta + & {
    background-image: none;
  }

  > * {
    opacity: 0.65;
    transition: opacity 1s ease-out;
  }
  .status-link:hover & > * {
    opacity: 1;
  }

  &:before {
    content: '';
    position: absolute;
    top: calc(var(--top-padding) + var(--avatar-size));
    inset-inline-start: var(--line-start);
    width: var(--line-width);
    height: calc(
      100% - var(--top-padding) - var(--avatar-size) + (var(--top-padding) / 2)
    );
    background-color: var(--comment-line-color);
    z-index: 0;
    mask-image: linear-gradient(to bottom, #000 8px, transparent);
  }

  .avatar {
    margin-inline-start: calc((50px - var(--avatar-size)) / 2);
    justify-self: center;
    z-index: 1;
  }

  .content-compact {
    overflow: hidden;
    display: -webkit-box;
    display: box;
    -webkit-box-orient: vertical;
    box-orient: vertical;
    -webkit-line-clamp: 2;
    line-clamp: 2;
    font-size: 90%;
    line-height: var(--avatar-size);
  }

  .status-filtered-badge.badge-meta {
    margin-top: 6px;
    flex-direction: row;
    gap: 0.5em;
    color: var(--text-color);
    border-color: var(--text-color);
    background-color: var(--bg-blur-color);
    max-width: 100%;

    > span + span {
      position: static;

      &:empty {
        display: none;
      }
    }
  }
}

.status .container {
  flex-grow: 1;
  min-width: 0;
}
.status:not(.small) > .container {
  padding-inline-start: 12px;
}

.status > .container > .meta {
  display: flex;
  gap: 4px;
  /* justify-content: space-between; */
  white-space: nowrap;
}
.status.small > .container > .meta {
  margin-bottom: 4px;
}
.status > .container > .meta > * {
  min-width: 0;
  overflow: hidden;
  /* text-overflow: ellipsis; */
}
.status > .container > .meta .meta-name {
  mask-image: linear-gradient(var(--to-backward), transparent, black 16px);
  flex-grow: 1;

  .name-text b {
    opacity: 0.75;
  }
}
.status.large > .container > .meta {
  min-height: 50px;
}
.status > .container > .meta .arrow {
  color: var(--reply-to-color);
  vertical-align: middle;
}
.status > .container > .meta :is(.time, .edited) {
  color: var(--text-insignificant-color);
  text-align: end;
  text-decoration: none;
  flex-shrink: 0;
  margin-inline-start: 4px;
  white-space: nowrap;
}
.status > .container > .meta a.time {
  position: relative;
  overflow: visible;
  display: flex;
  align-items: center;
  gap: 2px;
  font-size: 90%;

  .more {
    margin-inline-start: 4px;
    transition: transform 0.2s ease-out;
  }
}
.status > .container > .meta a.time:is(:hover, :focus) {
  .more {
    transform: scale(1.2);
    color: var(--link-color);
  }
}
.status > .container > .meta a.time:active,
.status > .container > .meta a.time.is-open {
  text-decoration: none;
  opacity: 1;
}
.status > .container > .meta a.time:after {
  content: '';
  position: absolute;
  inset: -16px -16px -8px;
}
.status > .container > .meta .reply-to {
  opacity: 0.5;
  font-size: smaller;
}

.status-reply-badge {
  display: inline-flex;
  margin: 2px 0;
  margin-inline-start: 4px;
  gap: 4px;
  align-items: center;
  vertical-align: middle;
}
.status-reply-badge .icon {
  color: var(--reply-to-color);
}
.status-thread-badge {
  vertical-align: middle;
  display: inline-flex;
  margin: 2px 0;
  gap: 4px;
  align-items: center;
  color: var(--reply-to-text-color);
  background: var(--bg-color);
  border: 1px solid var(--reply-to-color);
  border-radius: 4px;
  padding: 4px;
  font-size: 10px;
  line-height: 1;
  text-transform: uppercase;
  opacity: 0.75;
  background-image: repeating-linear-gradient(
    -70deg,
    transparent,
    transparent 3px,
    var(--reply-to-faded-color) 3px,
    var(--reply-to-faded-color) 4px
  );
  font-weight: bold;
}
.status-direct-badge {
  vertical-align: middle;
  display: inline-flex;
  margin: 2px 0;
  gap: 4px;
  align-items: center;
  color: var(--reply-to-text-color);
  background-color: var(--bg-color);
  border: 1px solid var(--reply-to-text-color);
  border-radius: 4px;
  padding: 4px;
  font-size: 10px;
  line-height: 1;
  text-transform: uppercase;
  opacity: 0.75;
  font-weight: bold;
  box-shadow: inset 0 0 0 1px var(--reply-to-color);
}
/* ... */

